--- a/package.json
+++ b/package.json
@@ -16,25 +16,26 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "bugs": {
     "url": "https://github.com/sayari-analytics/sayari-node/issues"
   },
+  "type": "commonjs",
   "homepage": "https://github.com/sayari-analytics/sayari-node#readme",
   "dependencies": {
     "@types/js-base64": "3.0.0",
-    "@types/node-fetch": "2.6.10",
-    "@types/url-join": "4.0.1",
+    "@types/node-fetch": "2.6.9",
     "@types/qs": "6.9.11",
+    "@types/url-join": "4.0.1",
+    "@ungap/url-search-params": "0.2.2",
     "form-data": "4.0.0",
-    "js-base64": "3.7.5",
+    "js-base64": "3.7.2",
     "node-fetch": "2.7.0",
     "qs": "6.11.2",
-    "url-join": "5.0.0",
-    "@ungap/url-search-params": "0.2.2"
+    "url-join": "4.0.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.45",
+    "@types/node": "17.0.33",
+    "eslint": "^8.56.0",
     "typescript": "4.6.4"
   }
 }
