--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,57 +1,64 @@
 name: ci
 
+env:
+  CLIENT_ID: ${{ secrets.CLIENT_ID }}
+  CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+
 on: [push]
 
 jobs:
   compile:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
       - name: Set up node
-        uses: actions/setup-node@v3
-
+        uses: actions/setup-node@v4
       - name: Compile
         run: yarn && yarn build
 
   test:
     runs-on: ubuntu-latest
-    env:
-      CLIENT_ID: ${{ secrets.CLIENT_ID }}
-      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
       - name: Set up node
-        uses: actions/setup-node@v3
-
+        uses: actions/setup-node@v4
       - name: Compile
         run: yarn && yarn test    
 
-  publish:
-    needs: [ compile, test ]
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+  run-examples:
+    name: Run examples (to look for regressions)
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
       - name: Set up node
-        uses: actions/setup-node@v3
-
-      - name: Install dependencies
-        run: yarn install
-
+        uses: actions/setup-node@v4
       - name: Build
         run: yarn build
-
-      - name: Publish to npm
+      - name: test examples
         run: |
-          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
-          npm publish --access public
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "Running smoke test"
+          python examples/smoke-test.py
+
+#  publish:
+#    needs: [ compile, test ]
+#    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout repo
+#        uses: actions/checkout@v4
+#      - name: Set up node
+#        uses: actions/setup-node@v3
+#      - name: Install dependencies
+#        run: yarn install
+#      - name: Build
+#        run: yarn build
+#      - name: Publish to npm
+#        run: |
+#          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
+#          npm publish --access public
+#        env:
+#          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
