--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up node
         uses: actions/setup-node@v4
+        with:
+          node-version: 21
       - name: Build
         run: yarn && yarn build
       - name: test examples
