--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,22 +48,22 @@ jobs:
           echo "Running smoke test"
           node examples/smoke-test.mjs
 
-#  publish:
-#    needs: [ compile, test, run-examples ]
-#    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout repo
-#        uses: actions/checkout@v4
-#      - name: Set up node
-#        uses: actions/setup-node@v3
-#      - name: Install dependencies
-#        run: yarn install
-#      - name: Build
-#        run: yarn build
-#      - name: Publish to npm
-#        run: |
-#          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
-#          npm publish --access public
-#        env:
-#          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  publish:
+    needs: [ compile, test, run-examples ]
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - name: Set up node
+        uses: actions/setup-node@v4
+      - name: Install dependencies
+        run: yarn install
+      - name: Build
+        run: yarn build
+      - name: Publish to npm
+        run: |
+          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
+          npm publish --access public
+        env:
+          NPM_TOKEN: ${{ secrets.SDK_NPM_TOKEN }}
