attempt npm install in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
         run: yarn && yarn build
       - name: test examples
         run: |
+          nmp install .
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           echo "Running hello world"
           node examples/hello-world.mjs
