--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up node
         uses: actions/setup-node@v4
-      - name: Compile
+      - name: Compile & Test
         run: yarn && yarn test    
 
   run-examples:
