Allowing manual triggering to test task notifications.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
       - main
   schedule:
     - cron: '0 0 * * *' # Runs every midnight (00:00 UTC)
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   compile:
